--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-discord.py==2.3.2
-google-generative-ai==0.4.0
+discord
+google-genai==0.4.0
 Pillow==10.2.0
 requests==2.31.0
 python-dotenv==1.0.1
